--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ framework/pageobject/__pycache__/InputField.cpython-311.pyc
 test/__pycache__/TestFeedback.cpython-311-pytest-7.4.0.pyc
 test/test_feedback.py
 framework/pageobject/conftest.py
+framework/ConfTest.py
