--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,9 @@ framework/pageobject/__pycache__/InputField.cpython-311.pyc
 test/__pycache__/TestFeedback.cpython-311-pytest-7.4.0.pyc
 test/test_feedback.py
 framework/pageobject/conftest.py
+framework/pageobject/InputField.py
+framework/pageobject/SearchField.py
 framework/ConfTest.py
+.DS_Store
+InputField.py
+SearchField.py
