--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,18 @@ test/test_feedback.py
 framework/pageobject/conftest.py
 framework/pageobject/InputField.py
 framework/pageobject/SearchField.py
-framework/ConfTest.py
+#framework/ConfTest.py
+test/zip_test.py
+test/SqaTests.py
 .DS_Store
 InputField.py
 SearchField.py
+framework/__pycache__/conftest.cpython-311-pytest-7.4.0.pyc
+framework/__pycache__/zip_test.cpython-311-pytest-7.4.0.pyc
+framework/pageobject/__pycache__/BrowserFactory.cpython-311.pyc
+framework/pageobject/elements/__pycache__/BaseElement.cpython-311.pyc
+framework/pageobject/elements/__pycache__/Button.cpython-311.pyc
+framework/pageobject/elements/__pycache__/Input.cpython-311.pyc
+test/__pycache__/conftest.cpython-311-pytest-7.4.0.pyc
+test/__pycache__/test_feedback.cpython-311-pytest-7.4.0.pyc
+test/__pycache__/zip_test.cpython-311-pytest-7.4.0.pyc
